# clashG

./: .gitmodules  CMakeLists.txt  README.md  clashgapp.gresource.xml  main.c
include/: app.h  clashgappprefs.h  prefs.h  proxies-group.h  proxy-page.h  rule-page.h  rule_page.h  selectors-group.h  toggle-group.h  url-test-group.h  window.h
resources/: clashgapp.gresource.xml  window.xml
resources/schema/: org.nogfw.clashgapp.gschema.xml
resources/ui/: connection-page.xml  expander-group.xml  log-page.xml  prefs.xml  proxies-group.xml  proxy-page.xml  rule-page.xml  selectors-group.xml  toggle-group.xml  url-test-group.xml  window.xml
src/: app.c  clashgapp.c  main.c  prefs.c  proxies-group.c  proxy-page.c  rule-page.c  rule_page.c  selectors-group.c  toggle-group.c  url-test-group.c  window.c
src/app/: clashgapp.c  clashgapp.h
src/prefs/: clashgappprefs.c
src/window/: clashgappwin.c  clashgappwin.h
